Slight change in request_info.html

--- a/WebContent/request_info.html
+++ b/WebContent/request_info.html
@@ -181,7 +181,7 @@
 				<p align="center"><font face="Courier 10 Pitch">userprofile</font></p>
 			</td>
 			<td width="322" valign="top" bgcolor="#99ffcc" style="word-wrap:break-word;border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<p align="left"><font face="Courier 10 Pitch"><a href="../WebContent">http://domain:port/u</a>serprofile</font></p>
+				<p align="left"><font face="Courier 10 Pitch"><a href="../WebContent">http://domain:port/userprofile</a></font></p>
 			</td>
 			<td width="397" valign="top" bgcolor="#ccffff" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
 				<p align="left"><font face="Courier 10 Pitch">{“id”:1,
