--- a/WebContent/request_info.html
+++ b/WebContent/request_info.html
@@ -64,36 +64,54 @@
 	<tbody>
 		<tr>
 			<td width="61" bgcolor="#ffffcc" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1.25pt solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in" sdval="1" sdnum="1033;">
-				<p align="center"><font color="#cccccc"><font face="Courier 10 Pitch">1</font></font></p>
+				<p align="center"><font color="#0065ff"><font face="Courier 10 Pitch">0</font></font></p>
 			</td>
 			<td width="120" bgcolor="#cccc99" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<p align="center"><font color="#cccccc"><font face="Courier 10 Pitch">signup</font></font></p>
+				<p align="center"><font color="#0065ff"><font face="Courier 10 Pitch">signup</font></font></p>
 			</td>
 			<td width="322" valign="top" bgcolor="#99ffcc" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<p align="left"><a href="../WebContent"><font color="#cccccc"><font face="Courier 10 Pitch">http://95.156.255.90:8080/Parking/signin?username=moji&amp;
-				password=moji&amp;fname=Mojtaba&amp;
+				<p align="left"><a href="../WebContent"><font color="#0065ff"><font face="Courier 10 Pitch">http://95.156.255.90:8080/Parking/signup?cellphone=09172223333&amp;</font></font></a></p>
+			</td>
+			<td width="397" valign="top" bgcolor="#ccffff" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
+				<p align="left"><font color="#0065ff"><font face="Courier 10 Pitch">{“user_exist”:0}</font></font></p>
+			</td>
+			<td width="266" valign="top" bgcolor="#eeeeee" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
+				<p align="center"><font color="#0065ff"><font face="Courier 10 Pitch">The response shows that this
+user is existed in DB or not. The code verification process for this phone number is started. If this user exists already, there is no need
+to send information after phone number is verified.</font></font></p>
+			</td>
+		</tr>
+		<tr>
+			<td width="61" bgcolor="#ffffcc" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1.25pt solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in" sdval="1" sdnum="1033;">
+				<p align="center"><font color="#0065ff"><font face="Courier 10 Pitch">1</font></font></p>
+			</td>
+			<td width="120" bgcolor="#cccc99" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
+				<p align="center"><font color="#0065ff"><font face="Courier 10 Pitch">signup</font></font></p>
+			</td>
+			<td width="322" valign="top" bgcolor="#99ffcc" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
+				<p align="left"><a href="../WebContent"><font color="#0065ff"><font face="Courier 10 Pitch">http://95.156.255.90:8080/Parking/signin?password=moji&amp;fname=Mojtaba&amp;
 				lname=Arjomandi&amp;cellphone=09172223333&amp;
 				email_addr=moji@moji.com&amp;ads_flag=1</font></font></a></p>
 			</td>
 			<td width="397" valign="top" bgcolor="#ccffff" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<p align="left"><font color="#cccccc"><font face="Courier 10 Pitch">{“id”:1,
+				<p align="left"><font color="#0065ff"><font face="Courier 10 Pitch">{“id”:1,
 				“username”:”moji”, “fname”:”Mojtaba”,
 				“lname”:”Arjomandi”, “cellphone”:”09172223333”,
 				“email_addr”:”<a href="mailto:moji@moji.com">moji@moji.com</a>”,
 				“ads_flag”:1}</font></font></p>
 			</td>
 			<td width="266" valign="top" bgcolor="#eeeeee" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
-				<p align="center"><font color="#cccccc"><font face="Courier 10 Pitch">A
+				<p align="center"><font color="#0065ff"><font face="Courier 10 Pitch">A
 				Customer JSON object which is recorded in database and selected
 				as the signed in user is returned.</font></font></p>
 			</td>
 		</tr>
 		<tr>
 			<td width="61" bgcolor="#ffffcc" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1.25pt solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in" sdval="2" sdnum="1033;">
-				<p align="center"><font color="#cccccc"><font face="Courier 10 Pitch">2</font></font></p>
+				<p align="center"><font color="#0065ff"><font face="Courier 10 Pitch">2</font></font></p>
 			</td>
 			<td width="120" bgcolor="#cccc99" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<p align="center"><font color="#cccccc"><font face="Courier 10 Pitch">signup</font></font></p>
+				<p align="center"><font color="#0065ff"><font face="Courier 10 Pitch">signup</font></font></p>
 			</td>
 			<td width="322" valign="top" bgcolor="#99ffcc" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
 				<p align="left"><br/>
@@ -101,11 +119,11 @@
 				</p>
 			</td>
 			<td width="397" valign="top" bgcolor="#ccffff" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<p align="left"><font color="#cccccc"><font face="Courier 10 Pitch">{“status”:”unsuccessful”,
+				<p align="left"><font color="#0065ff"><font face="Courier 10 Pitch">{“status”:”unsuccessful”,
 				“message”:”Customer exists.”}</font></font></p>
 			</td>
 			<td width="266" valign="top" bgcolor="#eeeeee" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
-				<p align="center"><font color="#cccccc"><font face="Courier 10 Pitch">The
+				<p align="center"><font color="#0065ff"><font face="Courier 10 Pitch">The
 				case where this username exists for another customer.</font></font></p>
 			</td>
 		</tr>
