update request info to include changes in sign up method

--- a/WebContent/request_info.html
+++ b/WebContent/request_info.html
@@ -91,7 +91,7 @@ to send information after phone number is verified.</font></font></p>
 			<td width="322" valign="top" bgcolor="#99ffcc" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
 				<p align="left"><a href="../WebContent"><font color="#0065ff"><font face="Courier 10 Pitch">http://95.156.255.90:8080/Parking/signin?password=moji&amp;fname=Mojtaba&amp;
 				lname=Arjomandi&amp;cellphone=09172223333&amp;
-				email_addr=moji@moji.com&amp;ads_flag=1</font></font></a></p>
+				email_addr=moji@moji.com&amp;ads_flag=1&amp;profile_image=</font></font></a></p>
 			</td>
 			<td width="397" valign="top" bgcolor="#ccffff" style="border-top: none; border-bottom: 1.25pt solid #000000; border-left: 1px double #111111; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
 				<p align="left"><font color="#0065ff"><font face="Courier 10 Pitch">{“id”:1,
